<resources>
    <string name="app_name">Калькулятор ОСАГО</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="description">
        Данная программа поможет рассчитать ОСАГО для вашего автомобиля
    </string>

    <string name="greetings">
        Здравствуйте
    </string>

    <string name="aboutCarTitle">
        О вашем транспортном средстве
    </string>

    <string name="aboutCarDescript">
        Расскажите поподробнее о вашем транспортном средстве
    </string>

    <string name="carPower">
        Мощность ТС
    </string>

    <string name="carType">
        Тип ТС
    </string>

    <string-array name="typeCarArray">
        <item>Категория "A", "M"</item>
        <item>Категория "B", "BE"</item>
    </string-array>

    <string name="driversTitle">
        Водители
    </string>

    <string name="personCreationTitle">
        Создание профиля водителя
    </string>

    <string name="personCreationTitleDescript">
        Расскажите поподробнее о Вас
    </string>

    <string name="personName">
        Имя
    </string>

    <string name="personSurname">
        Фамилия
    </string>

    <string name="personAge">
        Дата рождения
    </string>

    <string name="personPlace">
        Область
    </string>

    <string name="driverCity">
        Город
    </string>

    <string name="personDateReleaseDL">
        Дата выдачи ВУ
    </string>

    <string name="personKBM">
        КБМ
    </string>

    <string name="KBMHint">
        Коэффицент КБМ
    </string>

    <string name="insuranceTitle">
        О страховых ограничениях
    </string>

    <string name="insuranceDescrip">
        Расскажите о особенностях вашего страхового договора
    </string>

    <string name="insuranceUsePeriod">
        Период использования ТС
    </string>

    <string name="insuranceUsePerson">
        Ограничения по количеству водителей
    </string>

    <string name="newPersonTitle">
        Добавление нового водителя
    </string>

    <string name="newPersonDescrip">
        Необходимо добавить еще одного водителя в страховой договор?
    </string>

    <string name="newPersonAgree">
        Да, я буду вносить еще одного водителя в страховой полис
    </string>

    <string name="newPersonDisagree">
        Нет, я собираюсь использовать ТС самостоятельно
    </string>

    <string name="resultTitle">
        Итог
    </string>

    <string name="resultDiscript">
        Итоговая цена страхового договора примерно равна:
    </string>

    <string name="result">
        35 231 рублей
    </string>

    <string-array name="driversRestrictions">
        <item>Нет</item>
        <item>Есть</item>
    </string-array>

    <string-array name="vechiclePeriod">
        <item>3 месяца</item>
        <item>От 3 до 4 месяцев</item>
        <item>От 4 до 5 месяцев</item>
        <item>От 5 до 6 месяцев</item>
        <item>От 6 до 7 месяцев</item>
        <item>От 7 до 8 месяцев</item>
        <item>От 8 до 9 месяцев</item>
        <item>Свыше 9 месяцев</item>
    </string-array>

    <string name="nameSurname">
        Имя Фамилия
    </string>
</resources>